Minor Java 11 language level updates